@@ -5,6 +5,7 @@
     <field name="code"/>
     <field name="employee"/>
     <field name="start"/>
+    <field name="start_date" tree_invisible="1"/>
     <field name="end"/>
     <field name="hours"/>
     <field name="state"/>
